# dynamic_registry

./: .gitignore  CMakeLists.txt  README.md  build.sh  demo.py  example.py  example_user_code.py  format.sh
csrc/: registry.cpp  registry.h
extension/: custom_ops.cpp
lib/dynamic_ops/: __init__.py  ops.py
pytorch_demo/: README.md  build.py  custom_ops.cpp  run.py  setup.py
